# radar-agent

./: .gitignore  README.md  README_CN.md  pyproject.toml
config/: default.yaml
radar/: __init__.py  cli.py  config.py  pipeline.py
radar/analyzers/: __init__.py  engine.py
radar/collectors/: __init__.py  base.py  github_collector.py  hn_collector.py  ph_collector.py  rss_collector.py  web_collector.py
radar/outputs/: __init__.py  json_out.py  markdown.py
