[project]
name = "radar-agent"
version = "0.1.0"
description = "AI-powered competitive intelligence agent — monitor competitors, track trends, and get actionable insights from GitHub, HN, Product Hunt, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.40",
    "feedparser>=6.0",
    "schedule>=1.2",
]

[project.scripts]
radar = "radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]
